# oder-manager-dev

./: .gitignore  docker-compose.dev.yml
client/: Dockerfile.dev  next.config.js  package-lock.json  package.json
client/src/components/: Register.tsx
client/src/pages/: index.tsx
client/src/pages/auth/: register.tsx
client/src/services/: api.ts
client/src/types/: index.ts
expense-control-backend/: pyproject.toml
expense-control-backend/tests/: test_expense_control_backend.py
expense-control-frontend/: README.md  package-lock.json  package.json
postgres-data/postgres/base/1/: 12902  12902_vm  12917  12922  12927  2663  3080  3081  3456_vm  3599
postgres-data/postgres/global/: 1136_vm  1137  1213_vm  1214  1232  1233  1260  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2694  2695  2697  2698  2847  2965  2967  3593  4061  pg_control  pg_internal.init
postgres-data/postgres/pg_stat/: db_0.stat  db_13067.stat  global.stat
server/: .dockerignore  Dockerfile.dev  config.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
server/app/: __init__.py
server/app/models/: __init__.py
server/app/routes/: __init__.py  auth.py  index.py  product.py
server/app/schemas/: product_schema.py  user_schema.py
server/migrations/versions/: 199622467ed5_initial_db.py  4f2e3d7d908c_initial_migrate.py  cc5df4ad3044_first.py
ui/: analysis_options.yaml  pubspec.yaml
ui/lib/: main.dart
ui/lib/components/: registerTextField.dart  register_form.dart
ui/lib/model/: user.dart
ui/lib/screens/: register.dart
(+53 files in other folders)
