[tool.poetry]
name = "expense-control-backend"
version = "0.1.0"
description = "Api Service for management your expense control"
authors = ["faamaral <fabianoamaral445@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
Flask-Admin = "^1.6.0"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
